[gd_scene load_steps=14 format=2]

[ext_resource path="res://walkman.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://walkingmanup.png" type="Texture" id=3]
[ext_resource path="res://walkingmandown.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "down",
"speed": 4.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "right",
"speed": 4.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "up",
"speed": 4.0
} ]

[sub_resource type="InputEventAction" id=8]
action = "ui_accept"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 16, 16 )
frames = SubResource( 3 )
animation = "down"

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 16, 16 )
current = true

[node name="DialogueBox" type="PanelContainer" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -192.0
margin_top = 96.0
margin_right = 192.0
margin_bottom = 192.0
rect_scale = Vector2( 0.998405, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueBox"]
margin_left = 7.0
margin_top = 7.0
margin_right = 377.0
margin_bottom = 89.0

[node name="MessageLabel" type="RichTextLabel" parent="DialogueBox/VBoxContainer"]
margin_right = 370.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_text = "gdffg"
text = "gdffg"

[node name="HBoxContainer" type="HBoxContainer" parent="DialogueBox/VBoxContainer"]
margin_top = 62.0
margin_right = 370.0
margin_bottom = 82.0

[node name="OkayButton" type="Button" parent="DialogueBox/VBoxContainer/HBoxContainer"]
margin_right = 370.0
margin_bottom = 20.0
size_flags_horizontal = 3
shortcut = SubResource( 9 )
text = "OK"

[connection signal="gui_input" from="DialogueBox/VBoxContainer/MessageLabel" to="." method="_on_MessageLabel_gui_input"]
[connection signal="pressed" from="DialogueBox/VBoxContainer/HBoxContainer/OkayButton" to="." method="_on_OkayButton_pressed"]
